# KCD

./: .gitignore  CMakeLists.txt  README.md
configuration/: directories.h  directories.h.in
demo_001/: CMakeLists.txt  demo_001.cpp
demo_002/: CMakeLists.txt  demo_002.cpp
resources/: messages.txt
